Update branding to arukamo and apply light gray theme

--- a/form3/index.html
+++ b/form3/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../src/form2/style.css" />
-    <title>アンケートフォーム3 - ナコータカス</title>
+    <title>アンケートフォーム3 - arukamo</title>
   </head>
   <body>
     <div id="form2-app" data-form-key="form3">
@@ -21,8 +21,8 @@
       <main class="form2">
         <header class="form2__header">
           <p class="form2__brand" data-role="brand">
-            <img class="form2__brand-logo" data-role="brand-logo" alt="ナコータカス ロゴ" hidden />
-            <span data-role="brand-text">ナコータカス</span>
+            <img class="form2__brand-logo" data-role="brand-logo" alt="arukamo ロゴ" hidden />
+            <span data-role="brand-text">arukamo</span>
           </p>
           <h1 class="form2__title" data-role="title">詳細アンケートにご協力ください</h1>
           <p class="form2__lead" data-role="lead">
