--- a/generator/page2/index.html
+++ b/generator/page2/index.html
@@ -10,15 +10,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../src/generator/style.css" />
-    <title>生成ページ2 - ナコータカス</title>
+    <title>生成ページ2 - arukamo</title>
   </head>
   <body>
     <div id="generator-app" data-prompt-key="page2" data-tier="intermediate">
       <main class="generator">
         <header class="generator__header">
           <p class="generator__brand" data-role="brand">
-            <img class="generator__brand-logo" data-role="brand-logo" alt="ナコータカス ロゴ" hidden />
-            <span data-role="brand-text">ナコータカス</span>
+            <img class="generator__brand-logo" data-role="brand-logo" alt="arukamo ロゴ" hidden />
+            <span data-role="brand-text">arukamo</span>
           </p>
           <p class="generator__page-tag">生成ページ</p>
           <h1 class="generator__title">ご協力ありがとうございました</h1>
