--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>ナコータカス 口コミルータ</title>
+    <title>arukamo 口コミルータ</title>
   </head>
   <body>
     <div id="app">
@@ -21,12 +21,12 @@
       <main class="router">
         <header class="router__header">
           <p class="router__brand" data-role="brand">
-            <img class="router__brand-logo" data-role="brand-logo" alt="ナコータカス ロゴ" hidden />
-            <span data-role="brand-text">ナコータカス</span>
+            <img class="router__brand-logo" data-role="brand-logo" alt="arukamo ロゴ" hidden />
+            <span data-role="brand-text">arukamo</span>
           </p>
           <h1 class="router__heading">口コミ投稿にご協力お願いします</h1>
           <p class="router__lead">
-            ナコータカスをご利用いただきありがとうございます。アンケートにご協力いただいたお客様に、お得な特典をプレゼントさせていただきます。
+            arukamoをご利用いただきありがとうございます。アンケートにご協力いただいたお客様に、お得な特典をプレゼントさせていただきます。
             <span class="router__note">アンケートに回答するだけでAIがクチコミを生成します。</span>
           </p>
         </header>
