Update English copy for survey and generator

--- a/form2/index.html
+++ b/form2/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ja">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -11,28 +11,28 @@
     href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="../src/form2/style.css" />
-  <title>アンケートフォーム2 - ISHIGAKIJIMA ACTIVITYCLUB</title>
+  <title>Survey Form - ISHIGAKIJIMA ACTIVITYCLUB</title>
 </head>
 
 <body>
   <div id="form2-app" data-form-key="form2">
     <noscript>
-      <p style="padding:1rem; text-align:center;">JavaScriptを有効にしてご利用ください。</p>
+      <p style="padding:1rem; text-align:center;">Please enable JavaScript to use this form.</p>
     </noscript>
     <main class="form2">
       <header class="form2__header">
         <p class="form2__brand" data-role="brand">
-          <img class="form2__brand-logo" data-role="brand-logo" alt="ISHIGAKIJIMA ACTIVITYCLUB ロゴ" hidden />
+          <img class="form2__brand-logo" data-role="brand-logo" alt="ISHIGAKIJIMA ACTIVITYCLUB Logo" hidden />
           <span data-role="brand-text">ISHIGAKIJIMA ACTIVITYCLUB</span>
         </p>
-        <h1 class="form2__title" data-role="title">体験に関するアンケートにご協力ください</h1>
+        <h1 class="form2__title" data-role="title">Please help us with a quick survey about your experience</h1>
         <p class="form2__lead" data-role="lead">
-          該当する項目を選択してください。複数回答可の設問はチェックマークで選べます。
+          Select the options that apply. You can check multiple boxes for some questions.
         </p>
       </header>
       <section class="form2__questions" data-role="question-list"></section>
       <section class="form2__actions">
-        <button type="button" class="form2__button" data-role="submit">クチコミ生成ページへ進む</button>
+        <button type="button" class="form2__button" data-role="submit">Proceed to Review Generation</button>
       </section>
       <p class="form2__status" data-role="status" hidden></p>
     </main>
