--- a/index.html
+++ b/index.html
@@ -25,10 +25,16 @@
           <img class="router__brand-logo" data-role="brand-logo" alt="ISHIGAKIJIMA ACTIVITYCLUB ロゴ" hidden />
           <span data-role="brand-text">ISHIGAKIJIMA ACTIVITYCLUB</span>
         </p>
-        <h1 class="router__heading">口コミ投稿にご協力お願いします</h1>
+        <h1 class="router__heading">
+          口コミ投稿にご協力お願いします<br>
+          Please leave us a review.<br><br>
+        </h1>
         <p class="router__lead">
-          ISHIGAKIJIMA ACTIVITYCLUBをご利用いただきありがとうございます。アンケートにご協力いただいたお客様に、お得な特典をプレゼントさせていただきます。
-          <span class="router__note">アンケートに回答するだけでAIがクチコミを生成します。</span>
+          ISHIGAKIJIMA ACTIVITYCLUBをご利用いただきありがとうございます。<br>アンケートにご協力いただいたお客様に、お得な特典をプレゼントさせて頂きます。
+          <br>Thank you for choosing ISHIGAKIJIMA ACTIVITY CLUB.<br>We have a special gift for guests who complete our
+          survey.<br><br>
+          <span class="router__note">アンケートに回答するだけでAIがクチコミを生成します。<br>Simply answer the survey, and AI will generate the
+            review for you.</span>
         </p>
       </header>
       <section class="router__buttons">
