デザイン更新

--- a/form2/index.html
+++ b/form2/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,32 +7,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap"
-    rel="stylesheet" />
   <link rel="stylesheet" href="../src/form2/style.css" />
-  <title>Survey Form - ISHIGAKIJIMA ACTIVITYCLUB</title>
+  <title>アンケート - Piste</title>
 </head>
 
 <body>
   <div id="form2-app" data-form-key="form2">
     <noscript>
-      <p style="padding:1rem; text-align:center;">Please enable JavaScript to use this form.</p>
+      <p style="padding:1rem; text-align:center;">JavaScriptを有効にしてご利用ください。</p>
     </noscript>
     <main class="form2">
       <header class="form2__header">
         <p class="form2__brand" data-role="brand">
-          <img class="form2__brand-logo" data-role="brand-logo" alt="ISHIGAKIJIMA ACTIVITYCLUB Logo" hidden />
-          <span data-role="brand-text">ISHIGAKIJIMA ACTIVITYCLUB</span>
+          <img class="form2__brand-logo" data-role="brand-logo" alt="Piste ロゴ" hidden />
+          <span data-role="brand-text">Piste</span>
         </p>
-        <h1 class="form2__title" data-role="title">Please help us with a quick survey about your experience</h1>
+        <h1 class="form2__title" data-role="title">ご利用アンケートにご協力ください</h1>
         <p class="form2__lead" data-role="lead">
-          Select the options that apply. You can check multiple boxes for some questions.
+          該当する項目を選択してください。複数選択可能な質問もあります。
         </p>
       </header>
       <section class="form2__questions" data-role="question-list"></section>
       <section class="form2__actions">
-        <button type="button" class="form2__button" data-role="submit">Proceed to Review Generation</button>
+        <button type="button" class="form2__button" data-role="submit">口コミ生成に進む</button>
       </section>
       <p class="form2__status" data-role="status" hidden></p>
     </main>
