--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   <link rel="stylesheet" href="./src/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap"
-    rel="stylesheet" />
-  <title>ISHIGAKIJIMA ACTIVITYCLUB - TOP</title>
+  <title>Piste - 口コミ投稿</title>
 </head>
 
 <body>
@@ -22,19 +19,18 @@
     <main class="router">
       <header class="router__header">
         <p class="router__brand" data-role="brand">
-          <img class="router__brand-logo" data-role="brand-logo" alt="ISHIGAKIJIMA ACTIVITYCLUB ロゴ" hidden />
-          <span data-role="brand-text">ISHIGAKIJIMA ACTIVITYCLUB</span>
+          <img class="router__brand-logo" data-role="brand-logo" alt="Piste ロゴ" hidden />
+          <span data-role="brand-text">Piste</span>
         </p>
         <h1 class="router__heading">
           口コミ投稿にご協力お願いします<br>
-          Please leave us a review.<br><br>
+          Please leave us a review.
         </h1>
         <p class="router__lead">
-          ISHIGAKIJIMA ACTIVITYCLUBをご利用いただきありがとうございます。<br>アンケートにご協力いただいたお客様に、お得な特典をプレゼントさせて頂きます。
-          <br>Thank you for choosing ISHIGAKIJIMA ACTIVITY CLUB.<br>We have a special gift for guests who complete our
-          survey.<br><br>
-          <span class="router__note">アンケートに回答するだけでAIがクチコミを生成します。<br>Simply answer the survey, and AI will generate the
-            review for you.</span>
+          Pisteをご利用いただきありがとうございます。<br>アンケートにご協力いただいたお客様に、お得な特典をプレゼントさせて頂きます。
+          <br>Thank you for choosing Piste.<br>We have a special gift for guests who complete our survey.
+          <br><br>
+          <span class="router__note">アンケートに回答するだけでAIがクチコミを生成します。</span>
         </p>
       </header>
       <section class="router__buttons">
@@ -48,9 +44,9 @@
         <button class="router__button" data-tier="intermediate">
           <span class="router__button-label">English</span>
           <span class="router__button-meta">
-            <small class="router__button-meta-highlight" data-role="button-meta-highlight">所要時間 60秒</small>
-            <span class="router__button-meta-description"
-              data-role="button-meta-description">選択式のアンケートに答えて100文字程度の文章生成</span>
+            <small class="router__button-meta-highlight" data-role="button-meta-highlight">Time required: 60 sec</small>
+            <span class="router__button-meta-description" data-role="button-meta-description">Answer a simple survey to
+              generate a review</span>
           </span>
         </button>
 
