--- a/form1/index.html
+++ b/form1/index.html
@@ -7,11 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap"
-    rel="stylesheet" />
   <link rel="stylesheet" href="../src/form2/style.css" />
-  <title>アンケートフォーム1 - ISHIGAKIJIMA ACTIVITYCLUB</title>
+  <title>アンケート - Piste</title>
 </head>
 
 <body>
@@ -22,8 +19,8 @@
     <main class="form2">
       <header class="form2__header">
         <p class="form2__brand" data-role="brand">
-          <img class="form2__brand-logo" data-role="brand-logo" alt="ISHIGAKIJIMA ACTIVITYCLUB ロゴ" hidden />
-          <span data-role="brand-text">ISHIGAKIJIMA ACTIVITYCLUB</span>
+          <img class="form2__brand-logo" data-role="brand-logo" alt="Piste ロゴ" hidden />
+          <span data-role="brand-text">Piste</span>
         </p>
         <h1 class="form2__title" data-role="title">体験の満足度を教えてください</h1>
         <p class="form2__lead" data-role="lead">
