--- a/generator/index.html
+++ b/generator/index.html
@@ -6,11 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap"
-    rel="stylesheet" />
   <link rel="stylesheet" href="../src/generator/style.css" />
-  <title>口コミ生成 - ISHIGAKIJIMA ACTIVITYCLUB</title>
+  <title>口コミ生成 - Piste</title>
 </head>
 
 <body>
@@ -18,8 +15,8 @@
     <main class="generator">
       <header class="generator__header">
         <p class="generator__brand" data-role="brand">
-          <img class="generator__brand-logo" data-role="brand-logo" alt="ISHIGAKIJIMA ACTIVITYCLUB ロゴ" hidden />
-          <span data-role="brand-text">ISHIGAKIJIMA ACTIVITYCLUB</span>
+          <img class="generator__brand-logo" data-role="brand-logo" alt="Piste ロゴ" hidden />
+          <span data-role="brand-text">Piste</span>
         </p>
         <p class="generator__page-tag">生成ページ</p>
         <h1 class="generator__title">ご協力ありがとうございました</h1>
